Days 1, 2, 5 - correct but need refactoring

--- a/Day1.ipynb
+++ b/Day1.ipynb
@@ -2,29 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "b59fc105-3d27-4f58-83c6-c0803e1643d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "import heapq"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ef72ecdd-35c5-4d16-9e94-59b1d9f671d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "directory_path = os.getcwd()\n",
-    "input_path = \"{0}/inputs/input1.txt\".format(directory_path)"
+    "input_path = \"inputs/input1.txt\".format(directory_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b3471f9c-1e2a-4d38-af79-7514562f856b",
    "metadata": {},
    "outputs": [],
